kubernetes/events.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-deployment
  labels:
    app: event
spec:
  replicas: 1
  selector:
    matchLabels:
      app: event
  template:
    metadata:
      labels:
        app: event
    spec:
      containers:
      - name: event
        image: slaac/event-oragnizer-event-service:lates
        ports:
        - containerPort: 3000
