kubernetes/events-database.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: event-db-deployment
  labels:
    app: event-db
spec:
  serviceName: "event-db-service"
  replicas: 1
  selector:
    matchLabels:
      app: event-db
  template:
    metadata:
      labels:
        app: event-db
    spec:
      volumes:
      - name: event-pv-storage
        persistentVolumeClaim:
          claimName: event-pvc
      containers:
      - name: event-db
        image: postgres:13.4
        resources:
          limits:
            memory: "1Gi"
            cpu: "500m"
        ports:
        - containerPort: 5432
        volumeMounts:
          - mountPath: "/var/lib/postgresql/data"
            name: event-pv-storage      
                
---
apiVersion: v1
kind: Service
metadata:
  name: event-db-service
spec:
  type: NodePort
  selector:
    app: event-db
  ports:
      # By default and for convenience, the `targetPort` is set to the same value as the `port` field.
    - port: 5432
      targetPort: 5432
