kubernetes/events-web.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-deployment
  labels:
    app: event
spec:
  replicas: 1
  selector:
    matchLabels:
      app: event
  template:
    metadata:
      labels:
        app: event
    spec:
      containers:
      - name: event
        image: slaac/event-service:main
        ports:
        - containerPort: 3000
        resources:
          limits:
            memory: "2Gi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: event-service
spec:
  type: NodePort
  selector:
    app: event
  ports:
      # By default and for convenience, the `targetPort` is set to the same value as the `port` field.
    - port: 3000
      targetPort: 3000
