kubernetes/ingress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: "route"

spec:
  rules:
    - host: myapp.com
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: event-service
                port:
                  number: 3000
          - path: /foo
            pathType: Exact
            backend:
              service:
                name:  service1
                port:
                  number: 80
